--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 main: de.linzn.heatingstatus.HeatingStatusPlugin
 name: heating-status
 version: ${project.version}
-depend: []
+depend: [ restful-api ]
