rename to pelltech

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.stem.plugins</groupId>
-    <name>heating-status</name>
+    <name>pelltech</name>
     <repositories>
         <repository>
             <id>enigmar-repo</id>
@@ -83,7 +83,7 @@
         </plugins>
     </build>
     <version>0.0.1</version>
-    <artifactId>heating-status</artifactId>
+    <artifactId>pelltech</artifactId>
     <dependencies>
         <dependency>
             <groupId>de.stem</groupId>
